# MakerAdventPythonRust

./: .gitignore  Readme.md  rp2-pico-20221201-unstable-v1.19.1-724-gfb7d21153.uf2
DAY1/: boot.py  pymakr.conf
DAY11/: hellosista.py  main.py  naughtynaught.py  pymakr.conf
DAY2/: main.py  pymakr.conf
DAY3/: main.py  pymakr.conf  v1.py
DAY4/: Clignote.py  giratoire.py  main.py  pymakr.conf
DAY5/: buzz1.py  buzz2.py  buzz3.py  buzz4.py  main.py  pymakr.conf
DAY6/: main.py  pymakr.conf
DAY7/: exo1.py  main.py  pymakr.conf
DAY8/: exo1.py  main.py
day11-rust/: Cargo.toml
day11-rust/src/: main.rs
day2-rust/: Cargo.toml
day2-rust/src/: main.rs
day3-rust/: Cargo.toml
day3-rust/src/: main.rs
day4-rust/: Cargo.toml
day4-rust/src/: main.rs
day5-rust/: Cargo.toml
day5-rust/src/: main.rs
day6-rust/: Cargo.toml
day6-rust/.cargo/: config.toml
day6-rust/src/: main.rs
