[package]
name = "day4-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.5.0"
cortex-m = "0.7.2"
embedded-hal = "0.2.7"
cortex-m-rt = "0.7.2"
panic-halt = "0.2.0"
usbd-serial = "0.1.1"
usbd-hid = "0.6.1"
heapless = "0.7.16"
usb-device= "0.2.9"